Set up infrastructure and core projects

--- a/SeequentApi/Seequent.API.csproj
+++ b/SeequentApi/Seequent.API.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Seequent.Core\Seequent.Core.csproj" />
+    <ProjectReference Include="..\Seequent.Infrastructure\Seequent.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
