--- a/Seequent.Infrastructure/Seequent.Infrastructure.csproj
+++ b/Seequent.Infrastructure/Seequent.Infrastructure.csproj
@@ -15,4 +15,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Seequent.Core\Seequent.Core.csproj" />
+  </ItemGroup>
+
 </Project>
