Add GET Ids and POST endpoint

--- a/Seequent.Infrastructure/efpt.config.json
+++ b/Seequent.Infrastructure/efpt.config.json
@@ -1,14 +1,14 @@
 ﻿{
    "CodeGenerationMode": 4,
-   "ContextClassName": "Seequent.DbContext",
+   "ContextClassName": "SeequentDbContext",
    "ContextNamespace": null,
    "FilterSchemas": false,
    "IncludeConnectionString": false,
    "ModelNamespace": null,
-   "OutputContextPath": null,
-   "OutputPath": "Models",
+   "OutputContextPath": "..\\\\Seequent.Infrastructure",
+   "OutputPath": "..\\\\Seequent.Core\\Models",
    "PreserveCasingWithRegex": true,
-   "ProjectRootNamespace": "Seequent.Infrastructure",
+   "ProjectRootNamespace": "Seequent.Core",
    "Schemas": null,
    "SelectedHandlebarsLanguage": 2,
    "SelectedToBeGenerated": 0,
@@ -39,7 +39,7 @@
    "UseNoNavigations": false,
    "UseNoObjectFilter": false,
    "UseNodaTime": false,
-   "UseNullableReferences": false,
+   "UseNullableReferences": true,
    "UsePrefixNavigationNaming": false,
    "UseSchemaFolders": false,
    "UseSchemaNamespaces": false,
