--- a/SeequentApi/appsettings.json
+++ b/SeequentApi/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=desktop-qupa03p;Database=Seequent;Trusted_Connection=true;TrustServerCertificate=true;"
+        "DefaultConnection": "to override"
     },
     "Logging": {
         "LogLevel": {
